--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,28 @@
             <artifactId>spring-security-core</artifactId>
             <version>5.3.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>ai.djl</groupId>
+            <artifactId>api</artifactId>
+            <version>0.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>ai.djl</groupId>
+            <artifactId>repository</artifactId>
+            <version>0.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>ai.djl.pytorch</groupId>
+            <artifactId>pytorch-model-zoo</artifactId>
+            <version>0.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>ai.djl.pytorch</groupId>
+            <artifactId>pytorch-native-auto</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+
+
 
     </dependencies>
 
